--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "0.25.0",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "5.9.3"
+	},
+	"dependencies": {
+		"openai": "^6.15.0",
+		"zod": "^4.2.1"
 	}
 }
