--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@eslint/js": "^9.39.2",
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
+		"@typescript-eslint/eslint-plugin": "^8.50.1",
+		"@typescript-eslint/parser": "^8.50.1",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.25.0",
+		"eslint": "^9.39.2",
+		"eslint-plugin-obsidianmd": "^0.1.9",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "5.9.3"
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"openai": "^6.15.0",
